manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-agent-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-agent
  template:
    metadata:
      labels:
        app: jenkins-agent
    spec:
      containers:
        - name: agent
          image: adidix/jenkins-agent-k8s:arm64
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
          ports:
            - containerPort: 8080
